--- a/giulius-servlet/pom.xml
+++ b/giulius-servlet/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>giulius-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.3.4-hg</version>
+        <version>1.3.4</version>
     </parent>
     <artifactId>giulius-servlet</artifactId>
     <name>Giulius Servlet</name>
