--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>1.3.4-hg</version>
+        <version>1.3.4</version>
     </parent>
     <artifactId>jackson</artifactId>
     <name>jackson</name>
