--- a/embedded-jetty/pom.xml
+++ b/embedded-jetty/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>1.3.5</version>
+        <version>1.3.6-SNAPSHOT</version>
     </parent>
     <artifactId>embedded-jetty</artifactId>
     <name>Embedded Jetty for Guicy Servlets</name>
