--- a/statistics/pom.xml
+++ b/statistics/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>1.3.5</version>
+        <version>1.3.6-SNAPSHOT</version>
     </parent>
     <artifactId>statistics</artifactId>
     <name>Statistics (JMX-AOP)</name>
