--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -8,7 +8,7 @@
         <version>1.3.6-SNAPSHOT</version>
     </parent>
     <artifactId>jackson</artifactId>
-    <name>jackson</name>
+    <name>Jackson Guice Integration</name>
     <dependencies>
         <dependency>
             <artifactId>jackson-core</artifactId>
