--- a/embedded-jetty/pom.xml
+++ b/embedded-jetty/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
@@ -8,7 +8,7 @@
         <version>1.3.7-SNAPSHOT</version>
     </parent>
     <artifactId>embedded-jetty</artifactId>
-    <name>Embedded Jetty for Guicy Servlets</name>
+    <name>Embedded Jetty for Giulius Servlets</name>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
@@ -44,4 +44,23 @@
             <type>jar</type>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <parallel/>
+                    <parallelMavenExecution>false</parallelMavenExecution>
+                    <perCoreThreadCount>1</perCoreThreadCount>
+                    <threadCount>1</threadCount>
+                    <reuseForks>false</reuseForks>
+                    <systemPropertyVariables>
+                        <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
