--- a/embedded-jetty/pom.xml
+++ b/embedded-jetty/pom.xml
@@ -6,9 +6,13 @@
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
         <version>1.3.7-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <artifactId>embedded-jetty</artifactId>
     <name>Embedded Jetty for Giulius Servlets</name>
+    <properties>
+        <enforcer.skip>true</enforcer.skip>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
