--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -6,6 +6,7 @@
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
         <version>1.4.0</version>
+        <relativePath/>
     </parent>
     <artifactId>jackson</artifactId>
     <name>Jackson Guice Integration</name>
