--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
         <module>giulius-servlet</module>
         <module>jackson</module>
         <module>statistics</module>
+        <module>email-service</module>
     </modules>
 </project>
