Guice/statsd binding

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>jackson</module>
         <module>statistics</module>
         <module>email-service</module>
+        <module>statsd-aop</module>
     </modules>
 </project>
