--- a/statsd-aop/pom.xml
+++ b/statsd-aop/pom.xml
@@ -29,5 +29,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
