--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -52,5 +52,10 @@
             <artifactId>junit</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-multibindings</artifactId>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
