--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -4,8 +4,9 @@
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
         <version>1.5.0</version>
+        <relativePath/>
     </parent>
-    <name>Email Server</name>
+    <name>Email Sender</name>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>email-server</artifactId>
     <properties>
@@ -57,4 +58,19 @@
             <type>jar</type>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>timboudreau-builds</id>
+            <name>timboudreau.com builds</name>
+            <url>http://timboudreau.com/builds/plugin/repository/everything/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
