--- a/giulius-servlet/pom.xml
+++ b/giulius-servlet/pom.xml
@@ -5,6 +5,7 @@
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
         <version>1.5.0</version>
+        <relativePath/>
     </parent>
     <artifactId>giulius-servlet</artifactId>
     <name>Giulius Servlet</name>
@@ -28,4 +29,19 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>timboudreau-builds</id>
+            <name>timboudreau.com builds</name>
+            <url>http://timboudreau.com/builds/plugin/repository/everything/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
