--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
         <module>email-service</module>
         <module>statsd-aop</module>
         <module>jackson-jodatime</module>
+        <module>jackson-mongodb</module>
     </modules>
 </project>
