--- a/email-base/pom.xml
+++ b/email-base/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -7,23 +7,11 @@
         <version>1.6.4</version>
         <relativePath/>
     </parent>
-    <artifactId>jackson-jodatime</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>email-base</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>com.mastfrog</groupId>
-            <artifactId>jackson</artifactId>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-joda</artifactId>
-            <type>jar</type>
+            <artifactId>url</artifactId>
         </dependency>
     </dependencies>
 </project>
