--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>1.6.3</version>
+        <version>1.6.4</version>
         <relativePath/>
     </parent>
     <name>Giulius Web Parent</name>
@@ -20,5 +20,6 @@
         <module>statsd-aop</module>
         <module>jackson-jodatime</module>
         <module>jackson-mongodb</module>
+        <module>email-base</module>
     </modules>
 </project>
