POM file cleanup and bump version of a few libraries

--- a/embedded-jetty/pom.xml
+++ b/embedded-jetty/pom.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
@@ -9,9 +10,7 @@
     </parent>
     <artifactId>embedded-jetty</artifactId>
     <name>Embedded Jetty for Giulius Servlets</name>
-    <properties>
-        <enforcer.skip>true</enforcer.skip>
-    </properties>
+    <properties/>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -34,17 +33,14 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-servlet</artifactId>
-            <type>jar</type>
         </dependency>
     </dependencies>
     <build>
