--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
@@ -9,11 +10,7 @@
     <name>Email Sender</name>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>email-server</artifactId>
-    <properties>
-        <maven.junit.fork>yes</maven.junit.fork>
-        <maven.junit.forkmode>perTest</maven.junit.forkmode>
-        <enforcer.skip>true</enforcer.skip>
-    </properties>
+    <properties/>
     <dependencies>
         <dependency>
             <groupId>com.mastfrog</groupId>
@@ -22,7 +19,7 @@
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>email-base</artifactId>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>url</artifactId>
@@ -39,17 +36,14 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
-            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.23</version>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
-            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -59,7 +53,6 @@
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-multibindings</artifactId>
-            <type>jar</type>
         </dependency>
     </dependencies>
     <repositories>
