--- a/jackson-jodatime/pom.xml
+++ b/jackson-jodatime/pom.xml
@@ -14,7 +14,7 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>jackson</artifactId>
         </dependency>
         <dependency>
