--- a/jackson-mongodb/pom.xml
+++ b/jackson-mongodb/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-web-parent</artifactId>
-        <version>1.7.0</version>
+        <version>2.0.0-dev</version>
     </parent>
     <artifactId>jackson-mongodb</artifactId>
     <dependencies>
