Eliminate a lot of output from tests; misc cleanup; use newer versions of several libraries; release 2.0.1

--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -29,14 +29,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius-tests</artifactId>
             <scope>test</scope>
-            <type>jar</type>
         </dependency>
     </dependencies>
     <url>https://github.com/timboudreau/giulius-web</url>
