--- a/jackson-jodatime/pom.xml
+++ b/jackson-jodatime/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.0-dev</version>
         <relativePath/>
     </parent>
     <artifactId>jackson-jodatime</artifactId>
@@ -20,6 +20,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mastfrog</groupId>
+            <artifactId>annotation-processors</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <url>https://github.com/timboudreau/giulius-web</url>
