--- a/jackson-mongodb/pom.xml
+++ b/jackson-mongodb/pom.xml
@@ -4,10 +4,15 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-web-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.0-dev</version>
     </parent>
     <artifactId>jackson-mongodb</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>com.mastfrog</groupId>
+            <artifactId>annotation-processors</artifactId>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
