--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -4,12 +4,17 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.0-dev</version>
         <relativePath/>
     </parent>
     <artifactId>jackson</artifactId>
     <name>Jackson Guice Integration</name>
     <dependencies>
+        <dependency>
+            <groupId>com.mastfrog</groupId>
+            <artifactId>annotation-processors</artifactId>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
