--- a/giulius-servlet/pom.xml
+++ b/giulius-servlet/pom.xml
@@ -16,6 +16,15 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-annotation-processors</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>scopes</artifactId>
         </dependency>
         <dependency>
