--- a/statsd-aop/pom.xml
+++ b/statsd-aop/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
-        <artifactId>mastfrog-parent</artifactId>
+        <artifactId>mastfrog-parent-indexed</artifactId>
         <version>2.5.0-dev</version>
         <relativePath/>
     </parent>
@@ -19,6 +19,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-annotations</artifactId>
+        </dependency>        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius-tests</artifactId>
             <scope>test</scope>
         </dependency>
@@ -26,10 +30,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
         </dependency>
     </dependencies>
     <url>https://github.com/timboudreau/giulius-web</url>
