--- a/email-base/pom.xml
+++ b/email-base/pom.xml
@@ -14,7 +14,10 @@
             <artifactId>url</artifactId>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/giulius-web</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius-web/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius-web</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
