--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -69,7 +69,10 @@
             </snapshots>
         </repository>
     </repositories>
-    <url>https://github.com/timboudreau/giulius-web</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius-web/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius-web</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
