--- a/embedded-jetty/pom.xml
+++ b/embedded-jetty/pom.xml
@@ -58,7 +58,10 @@
             </plugin>
         </plugins>
     </build>
-    <url>https://github.com/timboudreau/giulius-web</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius-web/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius-web</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
