--- a/jackson-jodatime/pom.xml
+++ b/jackson-jodatime/pom.xml
@@ -27,7 +27,10 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/giulius-web</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius-web/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius-web</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
