--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,10 @@
         <module>jackson-mongodb</module>
         <module>email-base</module>
     </modules>
-    <url>https://github.com/timboudreau/giulius-web</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius-web/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius-web</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
