--- a/statistics/pom.xml
+++ b/statistics/pom.xml
@@ -32,7 +32,10 @@
             <artifactId>util-net</artifactId>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/giulius-web</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius-web/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius-web</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
