--- a/statsd-aop/pom.xml
+++ b/statsd-aop/pom.xml
@@ -41,6 +41,10 @@
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius-web.git</developerConnection>
     </scm>
+    <organization>
+        <name>Mastfrog Technologies</name>
+        <url>https://mastfrog.com</url>
+    </organization>
     <licenses>
         <license>
             <name>MIT</name>
