--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -9,6 +9,7 @@
     <name>Email Sender</name>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>email-server</artifactId>
+    <url>https://github.com/timboudreau/giulius-web</url>
     <properties/>
     <dependencies>
         <dependency>
@@ -74,10 +75,11 @@
         <url>https://github.com/timboudreau/giulius-web/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/giulius-web</url>
+        <url>https://github.com/timboudreau/giulius-web.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius-web.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -85,7 +87,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
