--- a/jackson-jodatime/pom.xml
+++ b/jackson-jodatime/pom.xml
@@ -8,6 +8,7 @@
         <relativePath/>
     </parent>
     <artifactId>jackson-jodatime</artifactId>
+    <url>https://github.com/timboudreau/giulius-web</url>
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -22,7 +23,7 @@
             <artifactId>jackson-datatype-joda</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>annotation-processors</artifactId>
             <scope>compile</scope>
         </dependency>
@@ -32,10 +33,11 @@
         <url>https://github.com/timboudreau/giulius-web/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/giulius-web</url>
+        <url>https://github.com/timboudreau/giulius-web.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius-web.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -43,7 +45,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
